--- a/demo/dynamic-load.html
+++ b/demo/dynamic-load.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <script src="../src/svg-pan-zoom.js"></script>
+    <script src="../dist/svg-pan-zoom.js"></script>
     <script src="jquery.min.js"></script>
   </head>
 
