--- a/demo/dynamic-load.html
+++ b/demo/dynamic-load.html
@@ -6,7 +6,7 @@
     <script src="jquery.min.js"></script>
   </head>
 
-  <body>
+  <body style="width: 100%; height: 100%">
     <h1>Demo for svg-pan-zoom: Dynamic SVG load</h1>
     <div id="container"></div>
     <button id="swap" style="padding: 5px 20px; background: red; border: 1px solid #ff0404;">swap</button>
@@ -18,7 +18,7 @@
         function createNewEmbed(src){
           var embed = document.createElement('embed');
           this.embed = embed;
-          embed.setAttribute('style', 'width: 500px; height: 500px; border:1px solid black;');
+          embed.setAttribute('style', 'width: 100%; height: 100%; border:1px solid black;');
           embed.setAttribute('type', 'image/svg+xml');
           embed.setAttribute('src', src);
 
@@ -28,6 +28,9 @@
             svgPanZoom(embed, {
               zoomEnabled: true,
               controlIconsEnabled: true,
+              minZoom: 0.1,
+              contain: true,
+              center: 1,
             });
           }
           embed.addEventListener('load', lastEventListener)
